@@ -1,3 +1,5 @@
+* Add start/end date to work for timesheet
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 
